Move geometry classes into geometry package, move pack into pipeline and split loaders, rename math to tensor